@@ -1,3 +1,7 @@
+2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track API.
+
 2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* AspNetEdit.mdp: Updated projects.
